--- a/TaskSite.csproj
+++ b/TaskSite.csproj
@@ -15,6 +15,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Microsoft.jQuery.Unobtrusive.Ajax" />
+  </ItemGroup>
 </Project>
