--- a/TaskSite.csproj
+++ b/TaskSite.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <None Remove="Microsoft.jQuery.Unobtrusive.Ajax" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Views\Home\ConfirmDelete.cshtml" />
+  </ItemGroup>
 </Project>
